Added text to index.html

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,3 +1,5 @@
 <section data-ng-controller="IndexController">
-	<h1>Welcome....</h1>
+	<h1>Welcome.... to digital music services connector!</h1>
+	<h2>Want to learn more?</h2>
+	<h3>Simply sign up!!</h3>
 </section>
