--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,3 +1,3 @@
 <section data-ng-controller="IndexController">
-	<h1>Welcome.....please sign up to continue!</h1>
+	<h1>Welcome....</h1>
 </section>
