--- a/app/views/users/signin.jade
+++ b/app/views/users/signin.jade
@@ -4,9 +4,9 @@ block auth
   form.signin.form-horizontal(action="/users/session", method="post")
     p.error= message
     .control-group
-      label.control-label(for='email') Email
+      label.control-label(for='username') Username
       .controls
-        input#email(type='text', name="email", placeholder='Email')
+        input#username(type='text', name="username", placeholder='Username')
 
     .control-group
       label.control-label(for='password') Password
