Second change to username and password sign in form

--- a/app/views/users/signin.jade
+++ b/app/views/users/signin.jade
@@ -14,7 +14,7 @@ block auth
         input#password(type='password', name="password", placeholder='Password')
 
     .form-actions
-      button.btn.btn-primary(type='submit') Sign in
+      button.btn.btn-primary(type='submit' href="/dashboard") Sign in
       &nbsp;
       | or&nbsp;
       a.show-signup(href="/signup") Sign up
