--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,5 +1,24 @@
+	<h1>Profile!</h1>
 
-<section data-ng-controller="UsersController">
-	<h1>Welcome!</h1>
+	<section data-ng-controller="ProfilesController">
+	<form class="form-horizontal" data-ng-submit="create()">
+		<div class="control-group">
+			<label class="control-label" for="title">Title</label>
+			<div class="controls">
+				<input type="text" data-ng-model="title" id="title" placeholder="Title" required>
+			</div>
+		</div>
+		<div class="control-group">
+			<label class="control-label" for="content">Content</label>
+			<div class="controls">
+				<textarea data-ng-model="content" id="content" cols="30" rows="10" placeholder="Content"></textarea>
+			</div>
+		</div>
+		<div class="control-group">
+			<div class="controls">
+				<input type="submit" class="btn">
+			</div>
+		</div>
+	</form>
 </section>
-<h1>{{user.username}}'s Profile</h1>
+</section>
